# rust-musiclight

./: Cargo.toml  README.md  run_pa.sh  test.lua
src/: animation.rs  config.rs  main.rs  signal_processing.rs  udpproto.rs  userscript.rs
src/animation/: particles.rs  racers.rs  sparkles.rs  spectrum.rs
